# deno_desktop

./: .gitignore  Cargo.toml  LICENSE  README.md  app.js  run.bat  test.js
examples/: README.md  common.js  hello_camera.js  hello_texture.js  hello_triangle.js
examples/shaders/: hello_camera.wgsl  hello_texture.wgsl  hello_triangle.wgsl
src/: core.js  event_loop.rs  extra.rs  main.rs  runtime.rs  surface.rs  util.rs  window.rs
