[package]
name = "deno_desktop"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
deno_runtime = { git = "https://github.com/DjDeveloperr/deno.git", rev = "ef37c603fe446b38d079e71c56e77c0eda342c99" }
# deno_runtime = { path = "./deno/runtime" }
winit-main = { version = "0.1.1", features = ["proc"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
# wgpu-core = { version = "0.11.0", features = ["raw-window-handle"] }
# wgpu-types = { version = "0.11.0", features = ["serde"] }
