[package]
name = "deno_desktop"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# deno_runtime = { git = "https://github.com/DjDeveloperr/deno.git", rev = "c4bfee9b42d53078ef7bf7de0a13a36b112611eb" }
deno_runtime = { path = "./deno/runtime" }
winit-main = { git = "https://gitlab.com/DjDeveloperr/winit-main", features = ["proc"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
